local font update

--- a/index.html
+++ b/index.html
@@ -16,17 +16,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PixiJS App</title>
 
-  <!-- Google Font -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Boldonse&display=swap"
-    rel="stylesheet"
-  />
-
+  <!-- Local font -->
   <style>
+    @font-face {
+      font-family: 'Boldonse';
+      src: url('fonts/Boldonse-Regular.ttf') format('truetype');
+      font-weight: normal;
+      font-style: normal;
+    }
+
     body {
       margin: 0;
       overflow: hidden;
     }
+
     canvas {
       display: block;
     }
