--- a/index.html
+++ b/index.html
@@ -12,22 +12,25 @@
   <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PixiJS App</title>
 
-  <!-- Local font -->
+  <!-- Local font (Bold Sans 800) -->
   <style>
     @font-face {
-      font-family: 'Boldonse';
-      src: url('fonts/Boldonse-Regular.ttf') format('truetype');
-      font-weight: normal;
+      font-family: 'LocalBoldSans';
+      src: url('fonts/LocalBoldSans-800.woff2') format('woff2'),
+           url('fonts/LocalBoldSans-800.woff') format('woff');
+      font-weight: 800;
       font-style: normal;
+      font-display: swap;
     }
 
     body {
       margin: 0;
       overflow: hidden;
+      font-family: 'LocalBoldSans', sans-serif;
     }
 
     canvas {
